<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText

        android:id="@+id/billEdit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:padding="5dp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/billAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="#00BCD4"
        android:hint="Enter Amount"
        android:labelFor="@+id/billEdit"
        android:padding="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/peopleView"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_row="0"
        android:layout_column="3" />

    <TextView
        android:id="@+id/tipPercentView"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_row="1"
        android:layout_column="0"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:id="@+id/billPersonView"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/per_person_total"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipTotalView"
        android:layout_width="116dp"
        android:layout_height="54dp"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/tip_total"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/billPerPersonAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:background="#F44336"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:background="#E91E63"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/BillTotalView"
        android:layout_width="116dp"
        android:layout_height="53dp"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/bill_total"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/BillTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:background="#9C27B0"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1" >

        <RadioButton
            android:id="@+id/ExactBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/no_bill_tip_and_total_are_exact" />

        <RadioButton
            android:id="@+id/TipRounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tip_the_tip_is_rounded_up" />

        <RadioButton
            android:id="@+id/TotalRounded"
            android:layout_width="wrap_content"


            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/total_the_total_is_rounded_up" />

        </RadioGroup>

</GridLayout>